[gd_scene load_steps=5 format=2]

[ext_resource path="res://code/Start_Menu.gd" type="Script" id=1]
[ext_resource path="res://assests/Music/Cyberpunk Moonlight Sonata.mp3" type="AudioStream" id=2]
[ext_resource path="res://assests/themes/CyberTrain.tres" type="Theme" id=3]
[ext_resource path="res://assests/Sprites/Logo.png" type="Texture" id=4]

[node name="Start_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.239216, 0.443137, 0.14902, 0.521569 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_right = -2.0

[node name="Menu_Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 426.0
margin_top = 263.0
margin_right = -283.0
margin_bottom = -88.0
custom_constants/separation = 75

[node name="Start" type="Button" parent="Menu_Container"]
margin_right = 371.0
margin_bottom = 34.0
text = "Start"

[node name="Settings" type="Button" parent="Menu_Container"]
margin_top = 109.0
margin_right = 371.0
margin_bottom = 143.0
size_flags_horizontal = 3
text = "Settings"

[node name="Credits" type="Button" parent="Menu_Container"]
visible = false
margin_top = 218.0
margin_right = 371.0
margin_bottom = 252.0
size_flags_horizontal = 3
text = "Credits"

[node name="Exit" type="Button" parent="Menu_Container"]
margin_top = 218.0
margin_right = 371.0
margin_bottom = 252.0
size_flags_horizontal = 3
text = "Exit"

[node name="MM_Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 245.0
margin_top = 3.0
margin_right = 419.0
margin_bottom = 43.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
expand = true

[connection signal="pressed" from="Menu_Container/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Menu_Container/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Menu_Container/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Menu_Container/Exit" to="." method="_on_Exit_pressed"]
